--- a/index.html
+++ b/index.html
@@ -164,7 +164,16 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mb-4 text-yellow-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1"> <path stroke-linecap="round" stroke-linejoin="round" d="M10 20v-6m0 0V4m0 6h10M6 14H4m0 0v6m0-6H2m4 0h2" /> </svg> <span class="font-semibold text-gray-700 dark:text-gray-200 text-center">JavaScript (ES6+)</span>
                 </div>
                 <div class="flex flex-col items-center p-6 bg-white dark:bg-gray-700 rounded-lg shadow-md transform hover:scale-105 transition duration-300 animate-on-scroll" data-animation="animate-fade-in-up" style="animation-delay: 0.4s;">
-                     <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mb-4 text-cyan-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1"> <path stroke-linecap="round" stroke-linejoin="round" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /> </svg> <span class="font-semibold text-gray-700 dark:text-gray-200">React</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mb-4 text-cyan-500" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M21.995 2.409a.5.5 0 0 0-.49-.03L.505 10.004a.5.5 0 0 0 .001.915l5.871 2.936 12.588-7.153a.5.5 0 0 1 .593-.09L6.415 15.972l.74 5.167a.5.5 0 0 0 .73.46l4.702-3.135 5.627 4.297a.5.5 0 0 0 .785-.447l3.355-19.074a.5.5 0 0 0-.413-.584z"/>
+                    </svg>
+                    <span class="font-semibold text-gray-700 dark:text-gray-200">Telegram Bot</span>
+                </div>
+                <div class="flex flex-col items-center p-6 bg-white dark:bg-gray-700 rounded-lg shadow-md transform hover:scale-105 transition duration-300 animate-on-scroll" data-animation="animate-fade-in-up" style="animation-delay: 0.4s;">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mb-4 text-cyan-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M10 20l4-16m4 16l-4-16M6 9l-4 4 4 4M18 9l4 4-4 4" />
+                    </svg>
+                    <span class="font-semibold text-gray-700 dark:text-gray-200">Node.js</span>
                 </div>
                  <div class="flex flex-col items-center p-6 bg-white dark:bg-gray-700 rounded-lg shadow-md transform hover:scale-105 transition duration-300 animate-on-scroll" data-animation="animate-fade-in-up" style="animation-delay: 0.5s;">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mb-4 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1"> <path stroke-linecap="round" stroke-linejoin="round" d="M15 7a2 2 0 012 2v6a2 2 0 01-2 2H9a2 2 0 01-2-2V9a2 2 0 012-2h6z" /> <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l.001 1M15 5l.001 1M12 3v2M12 19v2M5 9h1M5 15h1M19 9h-1M19 15h-1" /> </svg> <span class="font-semibold text-gray-700 dark:text-gray-200">Vue.js</span>
@@ -198,39 +207,51 @@
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-900 dark:text-white animate-on-scroll" data-animation="animate-fade-in">Featured Projects</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
                 <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:shadow-xl transition duration-500 group animate-on-scroll" data-animation="animate-slide-in-left">
-                    <img src="https://placehold.co/600x400/a78bfa/ffffff?text=Project+1" alt="Project 1 Placeholder" class="w-full h-48 object-cover group-hover:opacity-80 transition duration-500">
+                    <img src="img/p1.png" alt="Jay Luy Bot Project" class="w-full h-48 object-cover group-hover:opacity-80 transition duration-500">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2 text-gray-900 dark:text-white">Project Title One</h3>
-                        <p class="text-gray-600 dark:text-gray-400 mb-4 text-sm">A brief description of the project, highlighting key features and technologies used.</p>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-900 dark:text-white">Jay Luy Bot</h3>
+                        <p class="text-gray-600 dark:text-gray-400 mb-4 text-sm">Telegram Expense Tracking Bot
+                            Telegram bot for personal expense tracking. Features include adding expenses, viewing transaction history, and generating monthly summaries. It uses Supabase for data storage and offers a user-friendly interface with a persistent custom keyboard. The bot supports both Khmer and English languages, making it accessible to a diverse user base.</p>
                         <div class="flex space-x-2">
-                            <span class="text-xs font-medium bg-indigo-100 text-indigo-800 dark:bg-indigo-900 dark:text-indigo-300 px-2.5 py-0.5 rounded-full">React</span>
-                            <span class="text-xs font-medium bg-pink-100 text-pink-800 dark:bg-pink-900 dark:text-pink-300 px-2.5 py-0.5 rounded-full">Tailwind</span>
+                            <span class="text-xs font-medium bg-indigo-100 text-indigo-800 dark:bg-indigo-900 dark:text-indigo-300 px-2.5 py-0.5 rounded-full">Node.js</span>
+                            <span class="text-xs font-medium bg-pink-100 text-pink-800 dark:bg-pink-900 dark:text-pink-300 px-2.5 py-0.5 rounded-full">Supabase</span>
+                            <span class="text-xs font-medium bg-pink-100 text-blue-800 dark:bg-blue-900 dark:text-blue-300 px-2.5 py-0.5 rounded-full">Telegram Bot</span>
                         </div>
-                        <a href="#" class="inline-block mt-4 text-indigo-600 dark:text-indigo-400 hover:underline">View Details &rarr;</a>
+                        <a href="https://t.me/JayluyBot" target="_blank" class="inline-block mt-4 text-indigo-600 dark:text-indigo-400 hover:underline">View Details &rarr;</a>
                     </div>
                 </div>
                  <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:shadow-xl transition duration-500 group animate-on-scroll" data-animation="animate-fade-in-up">
-                     <img src="https://placehold.co/600x400/818cf8/ffffff?text=Project+2" alt="Project 2 Placeholder" class="w-full h-48 object-cover group-hover:opacity-80 transition duration-500">
+                     <img src="img/p2.png" alt="Yi QR" class="w-full h-48 object-cover group-hover:opacity-80 transition duration-500">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2 text-gray-900 dark:text-white">Project Title Two</h3>
-                        <p class="text-gray-600 dark:text-gray-400 mb-4 text-sm">Another project description, focusing on different aspects or challenges overcome.</p>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-900 dark:text-white">Yi QR</h3>
+                        <p class="text-gray-600 dark:text-gray-400 mb-4 text-sm">Telegram bot built with Node.js that offers QR code generation and decoding functionality. Users can easily create QR codes from text or URLs, and decode QR codes from uploaded images. The bot features a user-friendly interface with a persistent keyboard menu and handles multi-step operations. Designed for serverless deployment, this bot demonstrates a practical integration of QR technology within the Telegram messaging platform, providing a seamless experience for users to interact with QR codes.</p>
                          <div class="flex space-x-2">
-                            <span class="text-xs font-medium bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-300 px-2.5 py-0.5 rounded-full">Vue.js</span>
-                            <span class="text-xs font-medium bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-blue-300 px-2.5 py-0.5 rounded-full">API</span>
+                            <span class="text-xs font-medium bg-pink-100 text-blue-800 dark:bg-blue-900 dark:text-blue-300 px-2.5 py-0.5 rounded-full">Telegram Bot</span>
                         </div>
-                        <a href="#" class="inline-block mt-4 text-indigo-600 dark:text-indigo-400 hover:underline">View Details &rarr;</a>
+                        <a href="https://t.me/yi_qr_bot" class="inline-block mt-4 text-indigo-600 dark:text-indigo-400 hover:underline">View Details &rarr;</a>
                     </div>
                 </div>
                  <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:shadow-xl transition duration-500 group animate-on-scroll" data-animation="animate-slide-in-right">
-                     <img src="https://placehold.co/600x400/c4b5fd/ffffff?text=Project+3" alt="Project 3 Placeholder" class="w-full h-48 object-cover group-hover:opacity-80 transition duration-500">
+                     <img src="img/p3.png" alt="Yi Ruler Overlay" class="w-full h-48 object-cover group-hover:opacity-80 transition duration-500">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2 text-gray-900 dark:text-white">Project Title Three</h3>
-                        <p class="text-gray-600 dark:text-gray-400 mb-4 text-sm">Showcasing a different type of project or a personal favorite, explaining the impact.</p>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-900 dark:text-white">Yi Ruler Overlay</h3>
+                        <p class="text-gray-600 dark:text-gray-400 mb-4 text-sm">Adds a ruler overlay to the webpage when clicked.</p>
                          <div class="flex space-x-2">
-                            <span class="text-xs font-medium bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-300 px-2.5 py-0.5 rounded-full">JavaScript</span>
-                            <span class="text-xs font-medium bg-purple-100 text-purple-800 dark:bg-purple-900 dark:text-purple-300 px-2.5 py-0.5 rounded-full">Animation</span>
+                            <span class="text-xs font-medium bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-300 px-2.5 py-0.5 rounded-full">Chrome Extension</span>
+                            <span class="text-xs font-medium bg-purple-100 text-purple-800 dark:bg-purple-900 dark:text-purple-300 px-2.5 py-0.5 rounded-full">JavaScript</span>
                         </div>
-                        <a href="#" class="inline-block mt-4 text-indigo-600 dark:text-indigo-400 hover:underline">View Details &rarr;</a>
+                        <a href="https://chromewebstore.google.com/detail/lmcocncejnblenjipflfelnpkjjaljim?utm_source=item-share-cb" target="_blank" class="inline-block mt-4 text-indigo-600 dark:text-indigo-400 hover:underline">View Details &rarr;</a>
+                    </div>
+                </div>
+                 <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:shadow-xl transition duration-500 group animate-on-scroll" data-animation="animate-slide-in-right">
+                     <img src="img/p4.png" alt="Yi Notes" class="w-full h-48 object-cover group-hover:opacity-80 transition duration-500">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-2 text-gray-900 dark:text-white">Yi Notes</h3>
+                        <p class="text-gray-600 dark:text-gray-400 mb-4 text-sm">Yi Notes is a simple Visual Studio Code extension for taking project-specific notes directly within your workspace. Keep your thoughts, reminders, and documentation snippets organized and accessible without leaving your editor.</p>
+                         <div class="flex space-x-2">
+                            <span class="text-xs font-medium bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-300 px-2.5 py-0.5 rounded-full">VS Code Extension</span>
+                        </div>
+                        <a href="https://marketplace.visualstudio.com/items?itemName=Mengyi.yi-notes" target="_blank" class="inline-block mt-4 text-indigo-600 dark:text-indigo-400 hover:underline">View Details &rarr;</a>
                     </div>
                 </div>
             </div>
