add google site review

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <meta name="google-site-verification" content="Hdq1aNsG4ZWcUKsGTGBL8nsisF6wWRQEStqy2rA7yvw" />
     <script>
         tailwind.config = {
             darkMode: 'class', // Enable class-based dark mode
