update contact mail

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <p class="text-xl font-mono font-bold mb-10 relative z-10 max-w-lg mx-auto">
                     My inbox is open. Let's build something that breaks the internet (in a good way).
                 </p>
-                <a href="mailto:hello@mengyi.dev" class="inline-block px-12 py-5 bg-white text-ink text-xl font-black border-3 border-ink shadow-brutal hover:scale-105 hover:shadow-brutal-blue transition-all relative z-10 transform hover:-rotate-1">
+                <a href="mailto:mengyi.yoeng34@gmail.com" class="inline-block px-12 py-5 bg-white text-ink text-xl font-black border-3 border-ink shadow-brutal hover:scale-105 hover:shadow-brutal-blue transition-all relative z-10 transform hover:-rotate-1">
                     SAY HELLO
                 </a>
             </div>
